

                        CHANGES

In this files, you will find changes between java OMiSCID versions.

1.0.3
dnssd server
+dnssd fix among implementation (coherence in full name ...)

1.0.2
r1614
2006-10-26
        fix:  implemented properly the sendToOneClient using a ServiceProxy
        impr: performance improvement for introspection connections
        fix:  added missing stream closing causing problems with numerous variable change notification
        impr: made some exceptions RuntimeException
        fix:  removed some more synchronization to allow to findService while doing other operations
        fix:  for OSGi, made the service proxy cache dependent of the service that creates the proxy
        impr: throwing some omiscid exceptions (instead of NPE) for some ServiceProxy methods

1.0.1
r1463
        fix: made variable subscription working properly from the common api
        fix: removed deadlock happening in some stressing tests
        fix: peer id propagation to the connectors after registration

1.0.0
        first release