@@ -5,8 +5,10 @@
 In this files, you will find changes between java OMiSCID versions.
 
 1.0.3
-dnssd server
++dnssd server refresh (allow declaration)
 +dnssd fix among implementation (coherence in full name ...)
++dnssd avahi refresh : !!! still not 100% ok
+        fix:  added some fallback behaviours to avoid exception when really old services are present
 
 1.0.2
 r1614
